--- a/app/.prettierrc
+++ b/app/.prettierrc
@@ -1,6 +1,13 @@
 {
-    "semi": true,
-    "singleQuote": true,
-    "tabWidth": 2,
-    "trailingComma": "es5"
+  "printWidth": 200,
+  "singleQuote": true,
+  "useTabs": false,
+  "tabWidth": 2,
+  "semi": true,
+  "bracketSpacing": true,
+  "indent_style": "space",
+  "bracketSameLine": true,
+  "arrowParens": "always",
+  "trailingComma": "none",
+  "singleAttributePerLine": true
 }
