--- a/app/package.json
+++ b/app/package.json
@@ -8,7 +8,7 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint",
-    "prepare": "husky"
+    "prepare": "cd .. && husky app/.husky"
   },
   "private": true,
   "dependencies": {
