--- a/app/package.json
+++ b/app/package.json
@@ -8,7 +8,11 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint",
-    "prepare": "cd .. && husky app/.husky"
+    "prepare": "cd .. && husky app/.husky",
+    "format": "prettier --write \"src/**/*.{ts,js,html,css,json,md}\"",
+    "format:check": "prettier --check \"src/**/*.{ts,js,html,css,json,md}\"",
+    "lint:all": "npx eslint \"src/**/*.{ts,html}\" --fix",
+    "fix": "npm run format && npm run lint:all"
   },
   "private": true,
   "dependencies": {
@@ -38,8 +42,10 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "lint-staged": "^15.5.0",
     "prettier": "^3.3.3",
     "typescript": "~5.5.2",
     "typescript-eslint": "8.18.0"
-  }
+  },
+  "type": "module"
 }
