--- a/app/package.json
+++ b/app/package.json
@@ -13,7 +13,7 @@
     "format": "prettier --write \"{,src/**/}*.{ts,js,html,css,json,md}\"",
     "lint:check": "npx eslint \"{,src/**/}*.{ts,html,js}\"",
     "lint:all": "npx eslint \"{,src/**/}*.{ts,html,js}\" --fix",
-    "fix": "npm run format && npm run lint:all"
+    "fix": "npm run format; npm run lint:all"
   },
   "private": true,
   "dependencies": {
